--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,6 @@
     "type": "library",
     "description": "User agent decoder; http://user-agent-string.info/",
     "autoload": {
-        "files": ["librairies/UASparser.php"]
+        "files": ["libraries/UASparser.php"]
     }
 }
